--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ca.properties
@@ -12,7 +12,9 @@ change-image=Canviar imatge (Automatic Translation)
 changes-saved-at-x=Canvis desats a {0}.
 changes-to-experiences-are-applied-immediately=Els canvis fets a les experiències s'apliquen immediatament.
 container=Contenidor
+content-name=Nom de contingut (Automatic Translation)
 content-page-editor-comments-configuration-name=Comentaris de l'editor de la pàgina de continguts
+content-structure=Estructura del contingut (Automatic Translation)
 content-type=Tipus de contingut
 delete-experience=Suprimeix l'experiència
 deprioritize-experience=Anul·la la prioritat de l'experiència
@@ -22,6 +24,7 @@ draft-saved-at-x=Esborrany desat a {0}.
 dynamic-collection=Col·lecció dinàmica
 edit-experience=Edita l'experiència
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=Estructura existent (Automatic Translation)
 experience=Experiència
 experience-help-message-empty-state=Creeu una experiència per dirigir una pàgina a un públic específic. Una experiència és una còpia de la pàgina actual. Podeu canviar el contingut i el disseny per a la nova experiència.
 experience-help-message-started-state=Els visitants poden combinar múltiples experiències. Si els canvis entren en conflicte, es respectarà la prioritat de sota. Feu servir fletxes a les files per ordenar la llista de sota.
@@ -42,6 +45,7 @@ map-background=Fons del mapa
 map-to=Assigna a
 map[relational]=Mapa
 mapping-fields=Camps de mapatges
+new-content=Nous continguts (Automatic Translation)
 new-experience=Experiència nova
 new-segment=Segment nou
 no-asset-type-selected=No s'ha seleccionat cap tipus de contingut
@@ -74,6 +78,9 @@ show-editable-areas=Mostra les àrees editables
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Espai entre columnes
 specific-content=Contingut específic
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=Nom de l'estructura (Automatic Translation)
+structure-type=Tipus d'estructura (Automatic Translation)
 text-alignment=Alineació del text
 text-color=Color del text
 text-properties=Propietats del text
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Veure Usages (Automatic Translation)
 widgets=Ginys
 x-default={0} (Per defecte)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=No teniu cap secció.
