--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_el.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_el.properties
@@ -12,7 +12,9 @@ change-image=Αλλαγή εικόνας (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Οι αλλαγές στις εμπειρίες εφαρμόζονται αμέσως. (Automatic Translation)
 container=Κοντέινερ (Automatic Translation)
+content-name=Όνομα περιεχομένου (Automatic Translation)
 content-page-editor-comments-configuration-name=Σχόλια για το πρόγραμμα επεξεργασίας σελίδας περιεχομένου (Automatic Translation)
+content-structure=Δομή περιεχομένου (Automatic Translation)
 content-type=Τύπος περιεχομένου (Automatic Translation)
 delete-experience=Διαγραφή εμπειρίας (Automatic Translation)
 deprioritize-experience=Στέρηση εμπειρίας (Automatic Translation)
@@ -22,6 +24,7 @@ draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 dynamic-collection=Δυναμική συλλογή (Automatic Translation)
 edit-experience=Επεξεργασία εμπειρίας (Automatic Translation)
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=Υπάρχουσα δομή (Automatic Translation)
 experience=Εμπειρία (Automatic Translation)
 experience-help-message-empty-state=Δημιουργήστε μια εμπειρία για να απευθύνεις μια σελίδα σε ένα συγκεκριμένο κοινό. Μια εμπειρία είναι ένα αντίγραφο της τρέχουσας σελίδας σας. Μπορείτε να αλλάξετε το περιεχόμενο και τη διάταξη για τη νέα εμπειρία. (Automatic Translation)
 experience-help-message-started-state=Οι επισκέπτες μπορούν να ταιριάζουν με πολλές εμπειρίες. Εάν οι αλλαγές συγκρούονται, θα τηρηθεί η παρακάτω προτεραιότητα. Χρησιμοποιήστε βέλη σε σειρές για να παραγγείλετε την παρακάτω λίστα. (Automatic Translation)
@@ -42,6 +45,7 @@ map-background=Φόντο του χάρτη (Automatic Translation)
 map-to=Αντιστοίχιση σε (Automatic Translation)
 map[relational]=Map (Automatic Copy)
 mapping-fields=Χαρτογράφηση χωραφιών (Automatic Translation)
+new-content=Νέο περιεχόμενο (Automatic Translation)
 new-experience=Νέα εμπειρία (Automatic Translation)
 new-segment=Νέο τμήμα (Automatic Translation)
 no-asset-type-selected=Καμία επιλογή τύπου περιουσιακού στοιχείου (Automatic Translation)
@@ -74,6 +78,9 @@ show-editable-areas=Εμφάνιση επεξεργάσιμων περιοχών
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Διάστημα μεταξύ των στηλών (Automatic Translation)
 specific-content=Συγκεκριμένο περιεχόμενο (Automatic Translation)
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=Όνομα δομής (Automatic Translation)
+structure-type=Τύπος δομής (Automatic Translation)
 text-alignment=Στοίχιση κειμένου (Automatic Translation)
 text-color=Χρώμα κειμένου (Automatic Translation)
 text-properties=Ιδιότητες κειμένου (Automatic Translation)
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Προβολή Χρήσουςετών (Automatic Translation)
 widgets=Γραφικά στοιχεία (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=Δεν έχετε οποιεσδήποτε ενότητες. (Automatic Translation)
