--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_et.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_et.properties
@@ -12,7 +12,9 @@ change-image=Muuda pilti (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Kogemuste muudatusi rakendatakse kohe. (Automatic Translation)
 container=Konteiner (Automatic Translation)
+content-name=Sisu nimi (Automatic Translation)
 content-page-editor-comments-configuration-name=Sisulehekülje redaktori kommentaarid (Automatic Translation)
+content-structure=Sisu struktuur (Automatic Translation)
 content-type=Sisu tüüp (Automatic Translation)
 delete-experience=Kustuta kogemus (Automatic Translation)
 deprioritize-experience=Deprioritize kogemus (Automatic Translation)
@@ -22,6 +24,7 @@ draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 dynamic-collection=Dünaamiline kollektsioon (Automatic Translation)
 edit-experience=Redigeeri kogemust (Automatic Translation)
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=Olemasolev struktuur (Automatic Translation)
 experience=Kogemus (Automatic Translation)
 experience-help-message-empty-state=Saate luua mõne kindla vaatajaskonnaga lehe käsitlemiseks mõne kasutuskogemuse. Kogemus on teie praeguse lehe koopia. Saate muuta uue kogemuse sisu ja paigutust. (Automatic Translation)
 experience-help-message-started-state=Külastajad saavad sobitada mitmeid kogemusi. Kui muudatused on konfliktis, järgitakse alljärgnevat prioriteeti. Alltoodud loendi tellierimiseks kasutage ridades nooli. (Automatic Translation)
@@ -42,6 +45,7 @@ map-background=Kaart taust (Automatic Translation)
 map-to=Kaart (Automatic Translation)
 map[relational]=Map (Automatic Copy)
 mapping-fields=Väljade vastendamine (Automatic Translation)
+new-content=Uus sisu (Automatic Translation)
 new-experience=Uus kogemus (Automatic Translation)
 new-segment=Uus segment (Automatic Translation)
 no-asset-type-selected=Vara tüüpi pole valitud (Automatic Translation)
@@ -74,6 +78,9 @@ show-editable-areas=Näita muudetav piirkondades (Automatic Translation)
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Vahe veergude vahel (Automatic Translation)
 specific-content=Konkreetne sisu (Automatic Translation)
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=Struktuuri nimi (Automatic Translation)
+structure-type=Struktuuri tüüp (Automatic Translation)
 text-alignment=Teksti joondamine (Automatic Translation)
 text-color=Teksti värv (Automatic Translation)
 text-properties=Teksti atribuudid (Automatic Translation)
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Vaata Usages (Automatic Translation)
 widgets=Vidinad (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=Teil pole jaotisi. (Automatic Translation)
