--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fa.properties
@@ -12,7 +12,9 @@ change-image=تغییر تصویر (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=تغییرات در تجربه ها بلافاصله اعمال می شود. (Automatic Translation)
 container=کانتینر
+content-name=نام محتوا (Automatic Translation)
 content-page-editor-comments-configuration-name=صفحه محتوای ویرایشگر نظرات (Automatic Translation)
+content-structure=ساختار محتوا (Automatic Translation)
 content-type=نوع محتوا (Automatic Translation)
 delete-experience=حذف تجربه (Automatic Translation)
 deprioritize-experience=تجربه Deprioritize (Automatic Translation)
@@ -22,6 +24,7 @@ draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 dynamic-collection=مجموعه دینامیکی (Automatic Translation)
 edit-experience=ویرایش تجربه (Automatic Translation)
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=ساختار موجود (Automatic Translation)
 experience=تجربه (Automatic Translation)
 experience-help-message-empty-state=یک تجربه برای پرداختن به یک صفحه به مخاطبان خاص ایجاد کنید. تجربه یک کپی از صفحه فعلی شما است. شما می توانید محتوا و طرح برای تجربه جدید را تغییر دهید. (Automatic Translation)
 experience-help-message-started-state=بازدیدکنندگان می توانند با تجربه های متعدد مطابقت داشته باشند. اگر تغییرات در تضاد باشد ، اولویت زیر مورد احترام خواهد بود. استفاده از فلش در ردیف به سفارش لیست زیر وارد نمایید. (Automatic Translation)
@@ -42,6 +45,7 @@ map-background=سابقه و هدف نقشه (Automatic Translation)
 map-to=اختصاص به
 map[relational]=نقشه
 mapping-fields=زمینه های نقشه برداری (Automatic Translation)
+new-content=محتوای جدید (Automatic Translation)
 new-experience=تجربه جدید (Automatic Translation)
 new-segment=بخش جدید (Automatic Translation)
 no-asset-type-selected=هیچ نوع دارایی انتخاب (Automatic Translation)
@@ -74,6 +78,9 @@ show-editable-areas=نمایش مناطق قابل ویرایش (Automatic Trans
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=فاصله بین ستونها (Automatic Translation)
 specific-content=محتوای خاص (Automatic Translation)
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=نام ساختار (Automatic Translation)
+structure-type=نوع سازه (Automatic Translation)
 text-alignment=ترازبندی متن (Automatic Translation)
 text-color=رنگ متن (Automatic Translation)
 text-properties=ويژگيهای متن (Automatic Translation)
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=مشاهده موارد کاربرد (Automatic Translation)
 widgets=ویجت ها
 x-default={0} (Default) (Automatic Copy)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=هر بخش را ندارند. (Automatic Translation)
