--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fi.properties
@@ -12,7 +12,9 @@ change-image=Change Image (Automatic Copy)
 changes-saved-at-x=Muutokset tallennettu paikkaan {0}.
 changes-to-experiences-are-applied-immediately=Muutokset kokemuksiin tulevat voimaan välittömästi.
 container=Kansio
+content-name=Content Name (Automatic Copy)
 content-page-editor-comments-configuration-name=Sisältösivueditorin Kommentit
+content-structure=Content Structure (Automatic Copy)
 content-type=Sisällön tyyppi
 delete-experience=Poista Kokemus
 deprioritize-experience=Poista Kokemuksen Priorisointi
@@ -22,6 +24,7 @@ draft-saved-at-x=Luonnos tallennettu {0}.
 dynamic-collection=Dynaaminen Kokoelma
 edit-experience=Muokkaa Kokemusta
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=Existing Structure (Automatic Copy)
 experience=Kokemus
 experience-help-message-empty-state=Luo kokemus kohdistaaksesi sivun tietylle yleisölle. Kokemus on kopio nykyisestä sivustasi. Voit muuttaa sisältöä ja asettelua uutta kokemusta varten.
 experience-help-message-started-state=Vieraat voivat vastata useita kokemuksia. Jos muutoksissa on ristiriita, alla esitettyjä prioriteetteja noudatetaan. Käytä rivien nuolia järjestääksesi alla olevan luettelon.
@@ -42,6 +45,7 @@ map-background=Yhdistä Tausta
 map-to=Yhdistä kohteeseen
 map[relational]=Kartta
 mapping-fields=Yhdistää Kenttiä
+new-content=New Content (Automatic Copy)
 new-experience=Uusi Kokemus
 new-segment=Uusi Segmentti
 no-asset-type-selected=Ei Sisältötyyppiä Valittuna
@@ -74,6 +78,9 @@ show-editable-areas=Näytä Muokattavat Alueet
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Tila Sarakkeiden Välissä
 specific-content=Erityinen Sisältö
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=Structure Name (Automatic Copy)
+structure-type=Structure Type (Automatic Copy)
 text-alignment=Tekstin Tasaus
 text-color=Tekstin Väri
 text-properties=Tekstin ominaisuudet
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=View Usages (Automatic Copy)
 widgets=Pienoisohjelmat
 x-default={0} (Oletus)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=Sinulla ei ole yhtään osaa.
