--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fr.properties
@@ -12,7 +12,9 @@ change-image=Changer l'image (Automatic Translation)
 changes-saved-at-x=Modifications enregistrées dans {0}.
 changes-to-experiences-are-applied-immediately=Les modifications apportées aux expériences sont appliquées immédiatement.
 container=Conteneur
+content-name=Nom du contenu (Automatic Translation)
 content-page-editor-comments-configuration-name=Commentaires de l'éditeur de page de contenu
+content-structure=Structure du contenu (Automatic Translation)
 content-type=Type de contenu
 delete-experience=Supprimer l'expérience
 deprioritize-experience=Supprimer la priorité de l'expérience
@@ -22,6 +24,7 @@ draft-saved-at-x=Brouillon sauvegardé à {0}.
 dynamic-collection=Collection dynamique
 edit-experience=Éditer l'expérience
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=Structure existante (Automatic Translation)
 experience=Expérience
 experience-help-message-empty-state=Créez une expérience pour adresser une page à un public spécifique. Une expérience est une copie de la page actuelle. Vous pouvez en changer le contenu et la mise en page pour accorder à la nouvelle expérience.
 experience-help-message-started-state=Des visiteurs peuvent correspondre à plusieurs expériences. Si les modifications entre en conflit, la priorité ci-dessous sera respectée. Utilisez les flèches pour organiser la liste.
@@ -42,6 +45,7 @@ map-background=Fond de carte
 map-to=Mise en correspondance par rapport à
 map[relational]=Carte
 mapping-fields=Champs de mappage
+new-content=Nouveau contenu (Automatic Translation)
 new-experience=Nouvelle expérience
 new-segment=Nouveau segment
 no-asset-type-selected=Aucun type d'actif sélectionné
@@ -74,6 +78,9 @@ show-editable-areas=Afficher les Zones Modifiables
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Espace entre les colonnes
 specific-content=Contenu spécifique
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=Nom de la structure (Automatic Translation)
+structure-type=Type de structure (Automatic Translation)
 text-alignment=Alignement du texte
 text-color=Couleur du texte
 text-properties=Propriétés du textes
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Afficher les utilisations (Automatic Translation)
 widgets=Widgets
 x-default={0} (par défaut)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=Vous n'avez aucune section.
