--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hi_IN.properties
@@ -12,7 +12,9 @@ change-image=छवि बदलें (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=अनुभवों में परिवर्तन तुरंत लागू किए जाते हैं. (Automatic Translation)
 container=कंटेनर (Automatic Translation)
+content-name=सामग्री का नाम (Automatic Translation)
 content-page-editor-comments-configuration-name=सामग्री पृष्ठ संपादक टिप्पणियाँ (Automatic Translation)
+content-structure=सामग्री संरचना (Automatic Translation)
 content-type=सामग्री प्रकार (Automatic Translation)
 delete-experience=अनुभव हटाएं (Automatic Translation)
 deprioritize-experience=वंचित अनुभव (Automatic Translation)
@@ -22,6 +24,7 @@ draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 dynamic-collection=गतिक संग्रह (Automatic Translation)
 edit-experience=अनुभव संपादित करें (Automatic Translation)
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=मौजूदा संरचना (Automatic Translation)
 experience=अनुभव (Automatic Translation)
 experience-help-message-empty-state=किसी विशिष्ट ऑडियंस को किसी पेज को संबोधित करने के लिए एक अनुभव बनाएं । एक अनुभव अपने वर्तमान पृष्ठ की एक प्रति है । आप नए अनुभव के लिए सामग्री और लेआउट बदल सकते हैं । (Automatic Translation)
 experience-help-message-started-state=आगंतुकों को कई अनुभवों से मेल कर सकते हैं । यदि परिवर्तन विरोध करते हैं, तो नीचे दी गई प्राथमिकता का संमान किया जाएगा । नीचे दी गई सूची के क्रम में पंक्तियों में तीर का उपयोग करें । (Automatic Translation)
@@ -42,6 +45,7 @@ map-background=मानचित्र पृष्ठभूमि (Automatic T
 map-to=करने के लिए मैप (Automatic Translation)
 map[relational]=Map (Automatic Copy)
 mapping-fields=मैपिंग फ़ील्ड्स (Automatic Translation)
+new-content=नई सामग्री (Automatic Translation)
 new-experience=नया अनुभव (Automatic Translation)
 new-segment=नया सेगमेंट (Automatic Translation)
 no-asset-type-selected=कोई संपत्ति प्रकार चयनित नहीं (Automatic Translation)
@@ -74,6 +78,9 @@ show-editable-areas=संपादन योग्य क्षेत्र द
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=स्तंभों के बीच रिक्ति (Automatic Translation)
 specific-content=विशिष्ट सामग्री (Automatic Translation)
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=संरचना का नाम (Automatic Translation)
+structure-type=संरचना प्रकार (Automatic Translation)
 text-alignment=पाठ संरेखण (Automatic Translation)
 text-color=पाठ का रंग (Automatic Translation)
 text-properties=पाठ गुण (Automatic Translation)
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=उपयोग देखें (Automatic Translation)
 widgets=Widgets (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=आपके पास कोई अनुभाग नहीं है । (Automatic Translation)
