--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_in.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_in.properties
@@ -12,7 +12,9 @@ change-image=Ubah gambar (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Perubahan pengalaman segera diterapkan. (Automatic Translation)
 container=Kontainer (Automatic Translation)
+content-name=Nama konten (Automatic Translation)
 content-page-editor-comments-configuration-name=Konten halaman editor komentar (Automatic Translation)
+content-structure=Struktur konten (Automatic Translation)
 content-type=Jenis konten (Automatic Translation)
 delete-experience=Hapus pengalaman (Automatic Translation)
 deprioritize-experience=Deprioritaskan pengalaman (Automatic Translation)
@@ -22,6 +24,7 @@ draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 dynamic-collection=Dynamic koleksi (Automatic Translation)
 edit-experience=Edit pengalaman (Automatic Translation)
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=Struktur yang ada (Automatic Translation)
 experience=Pengalaman (Automatic Translation)
 experience-help-message-empty-state=Buat pengalaman untuk menangani halaman ke audiens tertentu. Sebuah pengalaman adalah salinan dari halaman Anda saat ini. Anda dapat mengubah konten dan tata letak untuk pengalaman baru. (Automatic Translation)
 experience-help-message-started-state=Pengunjung dapat mencocokkan beberapa pengalaman. Jika perubahan konflik, prioritas di bawah ini akan dihormati. Gunakan panah dalam baris untuk memesan daftar di bawah ini. (Automatic Translation)
@@ -42,6 +45,7 @@ map-background=Peta latar belakang (Automatic Translation)
 map-to=Peta untuk (Automatic Translation)
 map[relational]=Map (Automatic Copy)
 mapping-fields=Bidang pemetaan (Automatic Translation)
+new-content=Konten baru (Automatic Translation)
 new-experience=Pengalaman baru (Automatic Translation)
 new-segment=Segmen baru (Automatic Translation)
 no-asset-type-selected=Tidak ada tipe aset yang dipilih (Automatic Translation)
@@ -74,6 +78,9 @@ show-editable-areas=Daerah dapat diedit Tampilkan (Automatic Translation)
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Ruang antara kolom (Automatic Translation)
 specific-content=Konten khusus (Automatic Translation)
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=Nama struktur (Automatic Translation)
+structure-type=Jenis struktur (Automatic Translation)
 text-alignment=Perataan teks (Automatic Translation)
 text-color=Warna teks (Automatic Translation)
 text-properties=Properti teks (Automatic Translation)
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Lihat penggunaan (Automatic Translation)
 widgets=Widget (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=Anda tidak memiliki setiap bagian. (Automatic Translation)
