--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_it.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_it.properties
@@ -12,7 +12,9 @@ change-image=Cambia immagine (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Le modifiche alle esperienze vengono applicate immediatamente. (Automatic Translation)
 container=Contenitore (Automatic Translation)
+content-name=Nome contenuto (Automatic Translation)
 content-page-editor-comments-configuration-name=Commenti dell'editor di pagine di contenuto (Automatic Translation)
+content-structure=Struttura del contenuto (Automatic Translation)
 content-type=Tipo di contenuto (Automatic Translation)
 delete-experience=Cancella esperienza (Automatic Translation)
 deprioritize-experience=Deprioritizza l'esperienza (Automatic Translation)
@@ -22,6 +24,7 @@ draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 dynamic-collection=Collezione dinamica (Automatic Translation)
 edit-experience=Modifica esperienza (Automatic Translation)
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=Struttura esistente (Automatic Translation)
 experience=esperienza (Automatic Translation)
 experience-help-message-empty-state=Crea un'esperienza per indirizzare una pagina a un pubblico specifico. Un'esperienza è una copia della pagina corrente. È possibile modificare il contenuto e il layout per la nuova esperienza. (Automatic Translation)
 experience-help-message-started-state=I visitatori possono abbinare più esperienze. Se le modifiche dovessero essere in conflitto, verrà rispettata la priorità riportata di seguito. Utilizzare le frecce nelle righe per ordinare l'elenco seguente. (Automatic Translation)
@@ -42,6 +45,7 @@ map-background=Sfondo di mappa (Automatic Translation)
 map-to=Mappa di (Automatic Translation)
 map[relational]=Map (Automatic Copy)
 mapping-fields=Mapping dei campi (Automatic Translation)
+new-content=Nuovo contenuto (Automatic Translation)
 new-experience=Nuova esperienza (Automatic Translation)
 new-segment=Nuovo segmento (Automatic Translation)
 no-asset-type-selected=Nessun tipo di Asset selezionato (Automatic Translation)
@@ -74,6 +78,9 @@ show-editable-areas=Visualizza aree modificabili (Automatic Translation)
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Spazio tra le colonne (Automatic Translation)
 specific-content=Contenuto specifico (Automatic Translation)
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=Nome struttura (Automatic Translation)
+structure-type=Tipo di struttura (Automatic Translation)
 text-alignment=Allineamento del testo (Automatic Translation)
 text-color=Colore testo (Automatic Translation)
 text-properties=Proprietà testo (Automatic Translation)
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Visualizza utilizzi (Automatic Translation)
 widgets=Widget (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=Non hai tutte le sezioni. (Automatic Translation)
