--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_iw.properties
@@ -12,7 +12,9 @@ change-image=שינוי תמונה (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=שינויים בחוויות מוחלים באופן מיידי. (Automatic Translation)
 container=מיכל (Automatic Translation)
+content-name=שם תוכן (Automatic Translation)
 content-page-editor-comments-configuration-name=הערות של עורך דפי תוכן (Automatic Translation)
+content-structure=מבנה התוכן (Automatic Translation)
 content-type=סוג תוכן (Automatic Translation)
 delete-experience=מחיקת ניסיון (Automatic Translation)
 deprioritize-experience=ביטול עדיפות ניסיון (Automatic Translation)
@@ -22,6 +24,7 @@ draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 dynamic-collection=אוסף דינמי (Automatic Translation)
 edit-experience=ערוך ניסיון (Automatic Translation)
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=מבנה קיים (Automatic Translation)
 experience=ניסיון (Automatic Translation)
 experience-help-message-empty-state=צור חוויה שתפנה לעמוד לקהל מסוים. חוויה היא עותק של הדף הנוכחי שלך. באפשרותך לשנות תוכן ופריסה עבור החוויה החדשה. (Automatic Translation)
 experience-help-message-started-state=מבקרים יכולים להתאים חוויות מרובות. אם השינויים יתנגשו, העדיפות הבאה תהיה מכובדת. השתמש בחיצים בשורות כדי להזמין את הרשימה שלהלן. (Automatic Translation)
@@ -42,6 +45,7 @@ map-background=מפת רקע (Automatic Translation)
 map-to=למפות (Automatic Translation)
 map[relational]=Map (Automatic Copy)
 mapping-fields=מיפוי השדות (Automatic Translation)
+new-content=תוכן חדש (Automatic Translation)
 new-experience=חוויה חדשה (Automatic Translation)
 new-segment=מקטע חדש (Automatic Translation)
 no-asset-type-selected=נבחר את סוג הנכס אין (Automatic Translation)
@@ -74,6 +78,9 @@ show-editable-areas=מראים אזורים ניתנים לעריכה (Automatic
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=מרווח בין עמודות (Automatic Translation)
 specific-content=תוכן ספציפי (Automatic Translation)
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=שם המבנה (Automatic Translation)
+structure-type=סוג מבנה (Automatic Translation)
 text-alignment=יישור טקסט (Automatic Translation)
 text-color=צבע טקסט (Automatic Translation)
 text-properties=מאפייני טקסט (Automatic Translation)
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=הצג שימושים (Automatic Translation)
 widgets=יישומונים (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=אין לך כל מחלקה. (Automatic Translation)
