--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ja.properties
@@ -12,7 +12,9 @@ change-image=Change Image (Automatic Copy)
 changes-saved-at-x={0} に変更を保存
 changes-to-experiences-are-applied-immediately=エクスペリエンスへの変更は即座に適用されます。
 container=コンテナ
+content-name=Content Name (Automatic Copy)
 content-page-editor-comments-configuration-name=コンテンツページエディタのコメント
+content-structure=Content Structure (Automatic Copy)
 content-type=コンテンツの種類
 delete-experience=エクスペリエンスを削除
 deprioritize-experience=エクスペリエンスの優先度を下げる
@@ -22,6 +24,7 @@ draft-saved-at-x={0}に下書きを保存しました。
 dynamic-collection=動的コレクション
 edit-experience=エクスペリエンスを編集
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=Existing Structure (Automatic Copy)
 experience=エクスペリエンス
 experience-help-message-empty-state=特定のオーディエンスにページを表示するには、エクスペリエンスを作成してください。エクスペリエンスは現在のページのコピーです。新しいエクスペリエンスのコンテンツとレイアウトは変更できます。
 experience-help-message-started-state=閲覧者は複数のエクスペリエンスに一致する可能性があります。変更が衝突した場合、以下の優先度が考慮されます。以下のリストを並べ替えるには、行内の矢印を使用してください。
@@ -42,6 +45,7 @@ map-background=地図の背景
 map-to=マップ先
 map[relational]=マッピング
 mapping-fields=マッピングフィールド
+new-content=New Content (Automatic Copy)
 new-experience=新しいエクスペリエンス
 new-segment=新しいセグメント
 no-asset-type-selected=アセットタイプが選択されていません
@@ -74,6 +78,9 @@ show-editable-areas=編集可能なエリアを表示
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=カラム間のスペース
 specific-content=特定のコンテンツ
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=Structure Name (Automatic Copy)
+structure-type=Structure Type (Automatic Copy)
 text-alignment=テキストの位置
 text-color=テキストの色
 text-properties=テキストのプロパティ
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=View Usages (Automatic Copy)
 widgets=ウィジェット
 x-default={0}（デフォルト）
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=セクションがありません。
