--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ko.properties
@@ -12,7 +12,9 @@ change-image=이미지 변경 (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=경험에 대한 변경 사항은 즉시 적용됩니다. (Automatic Translation)
 container=컨테이너 (Automatic Translation)
+content-name=콘텐츠 이름 (Automatic Translation)
 content-page-editor-comments-configuration-name=콘텐츠 페이지 편집자 댓글 (Automatic Translation)
+content-structure=콘텐츠 구조 (Automatic Translation)
 content-type=콘텐츠 형식 (Automatic Translation)
 delete-experience=환경 삭제 (Automatic Translation)
 deprioritize-experience=환경 우선 순위 지정 (Automatic Translation)
@@ -22,6 +24,7 @@ draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 dynamic-collection=동적 컬렉션 (Automatic Translation)
 edit-experience=편집 환경 (Automatic Translation)
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=기존 구조 (Automatic Translation)
 experience=경험 (Automatic Translation)
 experience-help-message-empty-state=특정 잠재 고객에 게 페이지를 처리 하는 환경을 만듭니다. 환경은 현재 페이지의 복사본입니다. 새로운 환경에 대 한 콘텐츠와 레이아웃을 변경할 수 있습니다. (Automatic Translation)
 experience-help-message-started-state=방문자는 여러 경험을 일치 시킬 수 있습니다. 변경 사항이 충돌 하는 경우 아래 우선 순위를 준수 합니다. 아래 목록의 순서를 행에 화살표를 사용 합니다. (Automatic Translation)
@@ -42,6 +45,7 @@ map-background=지도 배경 (Automatic Translation)
 map-to=지도 (Automatic Translation)
 map[relational]=Map (Automatic Copy)
 mapping-fields=필드 매핑 (Automatic Translation)
+new-content=새 콘텐츠 (Automatic Translation)
 new-experience=새로운 경험 (Automatic Translation)
 new-segment=새 세그먼트 (Automatic Translation)
 no-asset-type-selected=아무 자산 종류 선택 (Automatic Translation)
@@ -74,6 +78,9 @@ show-editable-areas=편집 가능한 영역을 표시 (Automatic Translation)
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=열 사이의 간격 (Automatic Translation)
 specific-content=특정 콘텐츠 (Automatic Translation)
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=구조 이름 (Automatic Translation)
+structure-type=구조 유형 (Automatic Translation)
 text-alignment=텍스트 맞춤 (Automatic Translation)
 text-color=텍스트 색상 (Automatic Translation)
 text-properties=텍스트 속성 (Automatic Translation)
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=사용 보기 (Automatic Translation)
 widgets=위젯 (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=어떤 섹션 필요가 없습니다. (Automatic Translation)
