--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nb.properties
@@ -12,7 +12,9 @@ change-image=Endre bilde (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Endringer i opplevelser brukes umiddelbart. (Automatic Translation)
 container=Beholder (Automatic Translation)
+content-name=Navn på innhold (Automatic Translation)
 content-page-editor-comments-configuration-name=Kommentarer til innholdsside redigering (Automatic Translation)
+content-structure=Innhold struktur (Automatic Translation)
 content-type=Innholdstype (Automatic Translation)
 delete-experience=Slett opplevelse (Automatic Translation)
 deprioritize-experience=Deprioritize erfaring (Automatic Translation)
@@ -22,6 +24,7 @@ draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 dynamic-collection=Dynamisk samling (Automatic Translation)
 edit-experience=Rediger opplevelse (Automatic Translation)
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=Eksisterende struktur (Automatic Translation)
 experience=Erfaring (Automatic Translation)
 experience-help-message-empty-state=Opprett en opplevelse for å adressere en side til en bestemt målgruppe. En opplevelse er en kopi av gjeldende side. Du kan endre innhold og oppsett for den nye opplevelsen. (Automatic Translation)
 experience-help-message-started-state=Besøkende kan matche flere opplevelser. Hvis endringene er i konflikt med hverandre, vil prioriteten nedenfor bli respektert. Bruk piler i rader for å bestille listen nedenfor. (Automatic Translation)
@@ -42,6 +45,7 @@ map-background=Kart bakgrunn (Automatic Translation)
 map-to=Tilordnes (Automatic Translation)
 map[relational]=Map (Automatic Copy)
 mapping-fields=Tilordnet felt (Automatic Translation)
+new-content=Nytt innhold (Automatic Translation)
 new-experience=Ny opplevelse (Automatic Translation)
 new-segment=Nytt segment (Automatic Translation)
 no-asset-type-selected=Ingen Gjenstandstype valgt (Automatic Translation)
@@ -74,6 +78,9 @@ show-editable-areas=Vis redigerbare områder (Automatic Translation)
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Avstanden mellom kolonnene (Automatic Translation)
 specific-content=Spesifikt innhold (Automatic Translation)
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=Navn på struktur (Automatic Translation)
+structure-type=Struktur type (Automatic Translation)
 text-alignment=Tekstjustering (Automatic Translation)
 text-color=Tekstfarge (Automatic Translation)
 text-properties=Egenskaper for tekst (Automatic Translation)
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Vis bruksområder (Automatic Translation)
 widgets=Widgets (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=Du har ikke noen deler. (Automatic Translation)
