--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pl.properties
@@ -12,7 +12,9 @@ change-image=Zmień obraz (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Zmiany w doświadczeniach są stosowane natychmiast. (Automatic Translation)
 container=Kontener (Automatic Translation)
+content-name=Nazwa zawartości (Automatic Translation)
 content-page-editor-comments-configuration-name=Komentarze edytora strony zawartości (Automatic Translation)
+content-structure=Struktura Content (Automatic Translation)
 content-type=Typ zawartości (Automatic Translation)
 delete-experience=Usuń doświadczenie (Automatic Translation)
 deprioritize-experience=Depriorytetyzacja doświadczenia (Automatic Translation)
@@ -22,6 +24,7 @@ draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 dynamic-collection=Kolekcja dynamiczna (Automatic Translation)
 edit-experience=Edytuj doświadczenie (Automatic Translation)
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=Istniejąca struktura (Automatic Translation)
 experience=Doświadczenie (Automatic Translation)
 experience-help-message-empty-state=Utwórz środowisko do adresowania strony do określonej grupy odbiorców. Doświadczenie to kopia bieżącej strony. Można zmienić zawartość i układ dla nowego środowiska. (Automatic Translation)
 experience-help-message-started-state=Odwiedzający mogą dopasować się do wielu doświadczeń. Jeśli konflikt zmian, priorytet poniżej będą przestrzegane. Użyj strzałek w wierszach, aby zamówić poniższą listę. (Automatic Translation)
@@ -42,6 +45,7 @@ map-background=Tło mapy (Automatic Translation)
 map-to=Mapy do (Automatic Translation)
 map[relational]=Map (Automatic Copy)
 mapping-fields=Mapowania pól (Automatic Translation)
+new-content=Nowa zawartość (Automatic Translation)
 new-experience=Nowe doświadczenia (Automatic Translation)
 new-segment=Nowy segment (Automatic Translation)
 no-asset-type-selected=Nie ma wybranego typu Asset (Automatic Translation)
@@ -74,6 +78,9 @@ show-editable-areas=Pokaż obszary edytowalne (Automatic Translation)
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Odstęp między kolumnami (Automatic Translation)
 specific-content=Konkretna treść (Automatic Translation)
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=Nazwa struktury (Automatic Translation)
+structure-type=Typ struktury (Automatic Translation)
 text-alignment=Wyrównanie tekstu (Automatic Translation)
 text-color=Kolor tekstu (Automatic Translation)
 text-properties=Właściwości tekstu (Automatic Translation)
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Zobacz zwyczaje (Automatic Translation)
 widgets=Widgety (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=Nie masz żadnych części. (Automatic Translation)
