--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pt_BR.properties
@@ -12,7 +12,9 @@ change-image=Alterar imagem (Automatic Translation)
 changes-saved-at-x=Alteração salva em {0}.
 changes-to-experiences-are-applied-immediately=Modificações nas experiências são aplicadas imediatamente.
 container=Contêiner
+content-name=Nome do conteúdo (Automatic Translation)
 content-page-editor-comments-configuration-name=Comentários do Editor da Página de Conteúdo
+content-structure=Estrutura de conteúdo (Automatic Translation)
 content-type=Tipo de conteúdo
 delete-experience=Excluir experiência
 deprioritize-experience=Anular prioridade da experiência
@@ -22,6 +24,7 @@ draft-saved-at-x=Rascunho salvo em {0}.
 dynamic-collection=Coleção dinâmica
 edit-experience=Editar experiência
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=Estrutura existente (Automatic Translation)
 experience=Experiência
 experience-help-message-empty-state=Crie uma experiência para dirigir uma página para uma audiência específica. Uma experiência é uma cópia de uma página atual. Você pode alterar o conteúdo e layout da nova experiência.
 experience-help-message-started-state=Os visitantes podem combinar várias experiências. Se as modificações entrarem em conflito, a prioridade abaixo será respeitada. Use as setas em linhas para ordenar a lista abaixo.
@@ -42,6 +45,7 @@ map-background=Fundo de mapa
 map-to=Mapear para
 map[relational]=Mapa
 mapping-fields=Mapeando Campos
+new-content=Novo conteúdo (Automatic Translation)
 new-experience=Nova experiência
 new-segment=Novo segmento
 no-asset-type-selected=Nenhum tipo de conteúdo selecionado
@@ -74,6 +78,9 @@ show-editable-areas=Mostrar áreas editáveis
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Espaço entre colunas
 specific-content=Conteúdo específico
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=Nome da estrutura (Automatic Translation)
+structure-type=Tipo de estrutura (Automatic Translation)
 text-alignment=Alinhamento de texto
 text-color=Cor de texto
 text-properties=Propriedades de texto
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Visualizar usos (Automatic Translation)
 widgets=Widgets
 x-default={0} (Padrão)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=Você não possui nenhuma seção.
