--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pt_PT.properties
@@ -12,7 +12,9 @@ change-image=Change Image (Automatic Copy)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Changes to experiences are applied immediately. (Automatic Copy)
 container=Container (Automatic Copy)
+content-name=Nome do conteúdo (Automatic Translation)
 content-page-editor-comments-configuration-name=Content Page Editor Comments (Automatic Copy)
+content-structure=Estrutura de conteúdo (Automatic Translation)
 content-type=Content Type (Automatic Copy)
 delete-experience=Delete Experience (Automatic Copy)
 deprioritize-experience=Deprioritize Experience (Automatic Copy)
@@ -22,6 +24,7 @@ draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 dynamic-collection=Dynamic Collection (Automatic Copy)
 edit-experience=Edit Experience (Automatic Copy)
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=Estrutura existente (Automatic Translation)
 experience=Experience (Automatic Copy)
 experience-help-message-empty-state=Crie uma experiência para endereçar uma página a um público específico. Uma experiência é uma cópia da sua página atual. Você pode alterar o conteúdo e o layout da nova experiência. (Automatic Translation)
 experience-help-message-started-state=Os visitantes podem corresponder a várias experiências. Se as alterações forem conflitantes, a prioridade abaixo será respeitada. Use as setas em linhas para encomendar a lista abaixo. (Automatic Translation)
@@ -42,6 +45,7 @@ map-background=Map Background (Automatic Copy)
 map-to=Map to (Automatic Copy)
 map[relational]=Map (Automatic Copy)
 mapping-fields=Mapping Fields (Automatic Copy)
+new-content=Novo conteúdo (Automatic Translation)
 new-experience=New Experience (Automatic Copy)
 new-segment=New Segment (Automatic Copy)
 no-asset-type-selected=No Asset Type Selected (Automatic Copy)
@@ -74,6 +78,9 @@ show-editable-areas=Show Editable Areas (Automatic Copy)
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Space Between Columns (Automatic Copy)
 specific-content=Specific Content (Automatic Copy)
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=Nome da estrutura (Automatic Translation)
+structure-type=Tipo de estrutura (Automatic Translation)
 text-alignment=Text Alignment (Automatic Copy)
 text-color=Text Color (Automatic Copy)
 text-properties=Text properties (Automatic Copy)
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=View Usages (Automatic Copy)
 widgets=Widgets (Automatic Copy)
 x-default={0} (Default) (Automatic Copy)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=You do not have any sections. (Automatic Copy)
