--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ro.properties
@@ -12,7 +12,9 @@ change-image=Modificare imagine (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Modificările aduse experiențelor sunt aplicate imediat. (Automatic Translation)
 container=Container (Automatic Translation)
+content-name=Nume de conținut (Automatic Translation)
 content-page-editor-comments-configuration-name=Comentarii editor de pagini de conținut (Automatic Translation)
+content-structure=Structura conținutului (Automatic Translation)
 content-type=Tip de conținut (Automatic Translation)
 delete-experience=Ștergere experiență (Automatic Translation)
 deprioritize-experience=Deprioritizarea experienței (Automatic Translation)
@@ -22,6 +24,7 @@ draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 dynamic-collection=Colecție dinamică (Automatic Translation)
 edit-experience=Editare experiență (Automatic Translation)
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=Structura existentă (Automatic Translation)
 experience=Experienţă (Automatic Translation)
 experience-help-message-empty-state=Creați o experiență pentru a aborda o pagină într-o anumită audiență. O experienta este o copie a paginii curente. Puteți schimba conținutul și aspectul pentru noua experiență. (Automatic Translation)
 experience-help-message-started-state=Vizitatorii pot compara mai multe experiențe. În cazul în care schimbările de conflict, prioritatea de mai jos va fi respectat. Utilizați săgețile în rânduri pentru a comanda lista de mai jos. (Automatic Translation)
@@ -42,6 +45,7 @@ map-background=Hartă fundal (Automatic Translation)
 map-to=Harta pentru (Automatic Translation)
 map[relational]=Map (Automatic Copy)
 mapping-fields=Câmpurile de cartografiere (Automatic Translation)
+new-content=Continut nou (Automatic Translation)
 new-experience=Experienţă nouă (Automatic Translation)
 new-segment=Segment nou (Automatic Translation)
 no-asset-type-selected=Nici un tip de active selectate (Automatic Translation)
@@ -74,6 +78,9 @@ show-editable-areas=Arată zone editabile (Automatic Translation)
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Spaţiu între coloane (Automatic Translation)
 specific-content=Continut specific (Automatic Translation)
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=Nume structură (Automatic Translation)
+structure-type=Tip structură (Automatic Translation)
 text-alignment=Aliniere text (Automatic Translation)
 text-color=Culoare text (Automatic Translation)
 text-properties=Proprietăți text (Automatic Translation)
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Vezi Usages (Automatic Translation)
 widgets=Widget-uri (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=Nu aveţi orice secţiuni. (Automatic Translation)
