--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ru.properties
@@ -12,7 +12,9 @@ change-image=Изменение изображения (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Изменения в опыте применяются немедленно. (Automatic Translation)
 container=Контейнер (Automatic Translation)
+content-name=Название контента (Automatic Translation)
 content-page-editor-comments-configuration-name=Комментарии редактора страницы контента (Automatic Translation)
+content-structure=Структура контента (Automatic Translation)
 content-type=Тип содержимого (Automatic Translation)
 delete-experience=Удалить опыт (Automatic Translation)
 deprioritize-experience=Деприоритизе опыт (Automatic Translation)
@@ -22,6 +24,7 @@ draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 dynamic-collection=Динамическая коллекция (Automatic Translation)
 edit-experience=Опыт редактирования (Automatic Translation)
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=Существующая структура (Automatic Translation)
 experience=Опыт (Automatic Translation)
 experience-help-message-empty-state=Создайте опыт для обращения к странице с определенной аудиторией. Опыт — это копия текущей страницы. Вы можете изменить содержимое и макет для нового опыта. (Automatic Translation)
 experience-help-message-started-state=Посетители могут соответствовать нескольким опытом. Если конфликт изменений, приоритет ниже будут соблюдаться. Используйте стрелки рядами, чтобы заказать список ниже. (Automatic Translation)
@@ -42,6 +45,7 @@ map-background=Справочная карта (Automatic Translation)
 map-to=Карта для (Automatic Translation)
 map[relational]=Map (Automatic Copy)
 mapping-fields=Сопоставление полей (Automatic Translation)
+new-content=Новый контент (Automatic Translation)
 new-experience=Новый опыт (Automatic Translation)
 new-segment=Новый сегмент (Automatic Translation)
 no-asset-type-selected=Не выбран тип актива (Automatic Translation)
@@ -74,6 +78,9 @@ show-editable-areas=Показать редактируемых областей
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Расстояние между столбцами (Automatic Translation)
 specific-content=Конкретный контент (Automatic Translation)
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=Название структуры (Automatic Translation)
+structure-type=Тип структуры (Automatic Translation)
 text-alignment=Выравнивание текста (Automatic Translation)
 text-color=Цвет текста (Automatic Translation)
 text-properties=Свойства текста (Automatic Translation)
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Просмотр использований (Automatic Translation)
 widgets=Виджеты (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=Вы не имеют каких-либо разделы. (Automatic Translation)
