--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sk.properties
@@ -12,7 +12,9 @@ change-image=Zmeniť obrázok (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Zmeny v skúsenostiach sa uplatňujú okamžite. (Automatic Translation)
 container=Kontajner (Automatic Translation)
+content-name=Názov obsahu (Automatic Translation)
 content-page-editor-comments-configuration-name=Obsah editor stránky komentáre (Automatic Translation)
+content-structure=Štruktúra obsahu (Automatic Translation)
 content-type=Typ obsahu (Automatic Translation)
 delete-experience=Odstrániť skúsenosti (Automatic Translation)
 deprioritize-experience=Depriorovať skúsenosti (Automatic Translation)
@@ -22,6 +24,7 @@ draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 dynamic-collection=Dynamická kolekcia (Automatic Translation)
 edit-experience=Upraviť skúsenosť (Automatic Translation)
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=Existujúca štruktúra (Automatic Translation)
 experience=Skúsenosti (Automatic Translation)
 experience-help-message-empty-state=Vytvorte si skúsenosti na vyriešenie stránky konkrétnemu publiku. Skúsenosť je kópia vašej aktuálnej stránky. Môžete zmeniť obsah a rozloženie nového zážitku. (Automatic Translation)
 experience-help-message-started-state=Návštevníci sa môžu zhodovať s viacerými skúsenosťami. Ak sa zmení konflikt, bude dodržaná priorita. Pomocou šípok v riadkoch, aby zoznam nižšie. (Automatic Translation)
@@ -42,6 +45,7 @@ map-background=Mapa pozadia (Automatic Translation)
 map-to=Mapa (Automatic Translation)
 map[relational]=Map (Automatic Copy)
 mapping-fields=Mapovanie polí (Automatic Translation)
+new-content=Nový obsah (Automatic Translation)
 new-experience=Nový zážitok (Automatic Translation)
 new-segment=Nový segment (Automatic Translation)
 no-asset-type-selected=Vybratý typ žiadny majetok (Automatic Translation)
@@ -74,6 +78,9 @@ show-editable-areas=Zobraziť upraviteľných oblastí (Automatic Translation)
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Medzera medzi stĺpcami (Automatic Translation)
 specific-content=Špecifický obsah (Automatic Translation)
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=Názov štruktúry (Automatic Translation)
+structure-type=Typ štruktúry (Automatic Translation)
 text-alignment=Zarovnanie textu (Automatic Translation)
 text-color=Farba textu (Automatic Translation)
 text-properties=Vlastnosti textu (Automatic Translation)
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Zobrazenie zvykov (Automatic Translation)
 widgets=Widgety (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=Nemáte žiadne sekcie. (Automatic Translation)
