--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sl.properties
@@ -12,7 +12,9 @@ change-image=Spremeni sliko (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Spremembe izkušenj se uporabljajo takoj. (Automatic Translation)
 container=Posodo (Automatic Translation)
+content-name=Ime vsebine (Automatic Translation)
 content-page-editor-comments-configuration-name=Komentarji strani urejevalnika vsebine (Automatic Translation)
+content-structure=Struktura vsebine (Automatic Translation)
 content-type=Vrste vsebine (Automatic Translation)
 delete-experience=Izbriši izkušnjo (Automatic Translation)
 deprioritize-experience=Deprioritize izkušnje (Automatic Translation)
@@ -22,6 +24,7 @@ draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 dynamic-collection=Dinamična zbirka (Automatic Translation)
 edit-experience=Uredi izkušnjo (Automatic Translation)
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=Obstoječa struktura (Automatic Translation)
 experience=Izkušnje (Automatic Translation)
 experience-help-message-empty-state=Ustvarite izkušnjo za naslavljajo stran v določeno ciljno skupino. Izkušnja je kopija trenutne strani. Vsebino in postavitev lahko spremenite za novo izkušnjo. (Automatic Translation)
 experience-help-message-started-state=Obiskovalci se lahko ujemajo z več izkušnjami. Če bodo spremembe v sporu, bo prednostna naloga v nadaljevanju upoštevana. Če želite naročiti spodnji seznam, uporabite puščice v vrsticah. (Automatic Translation)
@@ -42,6 +45,7 @@ map-background=Zemljevid ozadje (Automatic Translation)
 map-to=Zemljevid (Automatic Translation)
 map[relational]=Map (Automatic Copy)
 mapping-fields=Preslikave polj (Automatic Translation)
+new-content=Nova vsebina (Automatic Translation)
 new-experience=Nova izkušnja (Automatic Translation)
 new-segment=Nov segment (Automatic Translation)
 no-asset-type-selected=Brez sredstev za vrsto izbrane (Automatic Translation)
@@ -74,6 +78,9 @@ show-editable-areas=Pokaži Editable območja (Automatic Translation)
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Presledek med stolpci (Automatic Translation)
 specific-content=Posebna vsebina (Automatic Translation)
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=Ime zgradbe (Automatic Translation)
+structure-type=Vrsta konstrukcije (Automatic Translation)
 text-alignment=Poravnava besedila (Automatic Translation)
 text-color=Barva besedila (Automatic Translation)
 text-properties=Lastnosti besedila (Automatic Translation)
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Ogled Usages (Automatic Translation)
 widgets=Pripomočki (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=Nimate odseki. (Automatic Translation)
