--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sv.properties
@@ -12,7 +12,9 @@ change-image=Change Image (Automatic Copy)
 changes-saved-at-x=Ändringar sparades kl. {0}.
 changes-to-experiences-are-applied-immediately=Ändringar i upplevelser tillämpas direkt.
 container=Behållare
+content-name=Content Name (Automatic Copy)
 content-page-editor-comments-configuration-name=Kommentarer för redigerare för sidinnehåll
+content-structure=Content Structure (Automatic Copy)
 content-type=Innehållstyp
 delete-experience=Ta bort upplevelse
 deprioritize-experience=Omprioritera upplevelse
@@ -22,6 +24,7 @@ draft-saved-at-x=Utkastet sparades {0}.
 dynamic-collection=Dynamisk samling
 edit-experience=Redigera upplevelse
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=Existing Structure (Automatic Copy)
 experience=Upplevelse
 experience-help-message-empty-state=Skapa en upplevelse för att adressera en sida till en specifik målgrupp. En upplevelse är en kopia av din nuvarande sida. Du kan inte ändra innehåll och layout för den nya upplevelsen.
 experience-help-message-started-state=Besökare kan matcha flera upplevelser. Om ändringar är i konflikt kommer prioriteten nedan att följas. Använd pilar i rader för att ordna listan nedan.
@@ -42,6 +45,7 @@ map-background=Bakgrundskarta
 map-to=Karta till
 map[relational]=Kartor
 mapping-fields=Mappning av fält
+new-content=New Content (Automatic Copy)
 new-experience=Ny upplevelse
 new-segment=Nytt segment
 no-asset-type-selected=Ingen tillgångstyp har valts
@@ -74,6 +78,9 @@ show-editable-areas=Visa redigerbara områden
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Utrymme mellan kolumner
 specific-content=Särskilt innehåll
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=Structure Name (Automatic Copy)
+structure-type=Structure Type (Automatic Copy)
 text-alignment=Textjustering
 text-color=Textfärg
 text-properties=Textegenskaper
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=View Usages (Automatic Copy)
 widgets=Widgetar
 x-default={0} (standard)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=Du har inga avsnitt.
