--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ar.properties
@@ -12,7 +12,9 @@ change-image=تغيير الصورة (Automatic Translation)
 changes-saved-at-x=يتم حفظ التغييرات في {0}.
 changes-to-experiences-are-applied-immediately=يتم تطبيق التغييرات على التجارب فوريًا.
 container=الحاوية
+content-name=اسم المحتوى (Automatic Translation)
 content-page-editor-comments-configuration-name=تعليقات محرر صفحة المحتوى (Automatic Translation)
+content-structure=بنية المحتوى (Automatic Translation)
 content-type=نوع المحتوى
 delete-experience=حذف الخبرة
 deprioritize-experience=خفض أولوية الخبرة
@@ -22,6 +24,7 @@ draft-saved-at-x=تم حفظ المسودة في {0}.
 dynamic-collection=التجميع الديناميكي
 edit-experience=تحرير الخبرة
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=الهيكل الحالي (Automatic Translation)
 experience=الخبرة
 experience-help-message-empty-state=قم بإنشاء تجربة لتوجيه صفحة إلى جمهور معين. التجربة هي نسخة لصفحتك الحالية. يمكنك تغيير المحتوى والمخطط للتجربة الجديدة.
 experience-help-message-started-state=يمكن للزوار مطابقة عدة تجارب. إذا تعارضت التغييرات، فسوف يتم احترام الأولوية أدناه. استخدم الأسهم في الصفوف لطلب القائمة أدناه.
@@ -42,6 +45,7 @@ map-background=خلفية الخريطة
 map-to=تعيين إلى
 map[relational]=الخريطه
 mapping-fields=تعيين الحقول
+new-content=محتوى جديد (Automatic Translation)
 new-experience=خبرة جديدة
 new-segment=مقطع جديد
 no-asset-type-selected=لم يتم تحديد نوع أصل
@@ -74,6 +78,9 @@ show-editable-areas=إظهار المناطق القابلة للتحرير
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=مسافة بين الأعمدة
 specific-content=محتوى خاص
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=اسم الهيكل (Automatic Translation)
+structure-type=نوع الهيكل (Automatic Translation)
 text-alignment=محاذاة النص
 text-color=لون النص
 text-properties=خصائص النص
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=عرض الاستخدامات (Automatic Translation)
 widgets=عناصر واجهة المستخدم
 x-default={0} (افتراضي)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=ليس لديك أي أقسام.
