--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_cs.properties
@@ -12,7 +12,9 @@ change-image=Změnit obrázek (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Změny zkušeností se uplatňují okamžitě. (Automatic Translation)
 container=Kontejner (Automatic Translation)
+content-name=Název obsahu (Automatic Translation)
 content-page-editor-comments-configuration-name=Komentáře k editoru stránek obsahu (Automatic Translation)
+content-structure=Struktura obsahu (Automatic Translation)
 content-type=Typ obsahu (Automatic Translation)
 delete-experience=Odstranit zkušenosti (Automatic Translation)
 deprioritize-experience=Snížit prioritu zkušeností (Automatic Translation)
@@ -22,6 +24,7 @@ draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 dynamic-collection=Dynamická kolekce (Automatic Translation)
 edit-experience=Upravit zkušenost (Automatic Translation)
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=Existující struktura (Automatic Translation)
 experience=Zkušenosti (Automatic Translation)
 experience-help-message-empty-state=Vytvoří zkušenost s adresním stránky určité cílové skupině. Zkušenost je kopie vaší aktuální stránky. Můžete změnit obsah a rozložení pro nové zážitky. (Automatic Translation)
 experience-help-message-started-state=Návštěvníci mohou porovnávat více zkušeností. Pokud změny kolidují, bude respektována níže uvedená priorita. Seznam níže můžete objednat pomocí šipek v řádcích. (Automatic Translation)
@@ -42,6 +45,7 @@ map-background=Pozadí s mapou (Automatic Translation)
 map-to=Mapovat na (Automatic Translation)
 map[relational]=Map (Automatic Copy)
 mapping-fields=Mapování polí (Automatic Translation)
+new-content=Nový obsah (Automatic Translation)
 new-experience=Nová zkušenost (Automatic Translation)
 new-segment=Nový segment (Automatic Translation)
 no-asset-type-selected=Žádný typ majetku, který je vybrán (Automatic Translation)
@@ -74,6 +78,9 @@ show-editable-areas=Zobrazit upravitelných oblastí (Automatic Translation)
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Mezera mezi sloupci (Automatic Translation)
 specific-content=Specifický obsah (Automatic Translation)
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=Název struktury (Automatic Translation)
+structure-type=Typ struktury (Automatic Translation)
 text-alignment=Zarovnání textu (Automatic Translation)
 text-color=Barva textu (Automatic Translation)
 text-properties=Vlastnosti textu (Automatic Translation)
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Zobrazit použití (Automatic Translation)
 widgets=Widgety (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=Nemáte žádné oddíly. (Automatic Translation)
