--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_de.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_de.properties
@@ -12,7 +12,9 @@ change-image=Change Image (Automatic Copy)
 changes-saved-at-x=Änderungen gespeichert um {0}.
 changes-to-experiences-are-applied-immediately=Änderungen an den Erfahrungswerten werden sofort umgesetzt.
 container=Container
+content-name=Content Name (Automatic Copy)
 content-page-editor-comments-configuration-name=Kommentare aus dem Editor der Inhaltsseite
+content-structure=Content Structure (Automatic Copy)
 content-type=Content-Type
 delete-experience=Erlebnis löschen
 deprioritize-experience=Erlebnis depriorisieren
@@ -22,6 +24,7 @@ draft-saved-at-x=Entwurf gespeichert um {0}.
 dynamic-collection=Dynamische Sammlung
 edit-experience=Erlebnis bearbeiten
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=Existing Structure (Automatic Copy)
 experience=Erlebnis
 experience-help-message-empty-state=Erstellen Sie ein Erlebnis, um eine Seite an ein bestimmtes Publikum zu richten. Ein Erlebnis ist eine Kopie deiner aktuellen Seite. Sie können Inhalt und Layout für das neue Erlebnis ändern.
 experience-help-message-started-state=Besucher können mehrere Erlebnisse kombinieren. Wenn die Änderungen im Konflikt stehen, wird die untenstehende Priorität berücksichtigt. Verwenden Sie Pfeile in Zeilen, um die untenstehende Liste zu sortieren.
@@ -42,6 +45,7 @@ map-background=Kartenhintergrund
 map-to=Zuordnen zu
 map[relational]=Landkarte
 mapping-fields=Zuordnungsfelder
+new-content=New Content (Automatic Copy)
 new-experience=Neues Erlebnis
 new-segment=Neues Segment
 no-asset-type-selected=Kein Assettyp ausgewählt
@@ -74,6 +78,9 @@ show-editable-areas=Bereiche anzeigen, die bearbeitet werden können
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Abstand zwischen Spalten
 specific-content=Spezifischer Content
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=Structure Name (Automatic Copy)
+structure-type=Structure Type (Automatic Copy)
 text-alignment=Textausrichtung
 text-color=Textfarbe
 text-properties=Texteigenschaften
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=View Usages (Automatic Copy)
 widgets=Widgets
 x-default={0} (Standard)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=Sie haben keine Abschnitte.
