--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_es.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_es.properties
@@ -12,7 +12,9 @@ change-image=Cambiar imagen (Automatic Translation)
 changes-saved-at-x=Cambios guardados a las {0}.
 changes-to-experiences-are-applied-immediately=Los cambios realizados en las experiencias se aplican de inmediato.
 container=Contenedor
+content-name=Nombre del contenido (Automatic Translation)
 content-page-editor-comments-configuration-name=Comentarios del editor de páginas de contenido
+content-structure=Estructura de contenido (Automatic Translation)
 content-type=Tipo de contenido
 delete-experience=Eliminar experiencia
 deprioritize-experience=Reducir prioridad de experiencia
@@ -22,6 +24,7 @@ draft-saved-at-x=Borrador guardado en {0}.
 dynamic-collection=Recopilación dinámica
 edit-experience=Editar experiencia
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=Estructura existente (Automatic Translation)
 experience=Experiencia
 experience-help-message-empty-state=Cree una experiencia para asignar una página a un público específico. Una experiencia es una copia de la página actual. Puede cambiar el contenido y el diseño de la nueva experiencia.
 experience-help-message-started-state=Se pueden asignar varias experiencias a un mismo visitante. Si los cambios entran en conflicto, se respetará la prioridad que aparece a continuación. Use las flechas de las filas para ordenar la lista siguiente.
@@ -42,6 +45,7 @@ map-background=Fondo del mapa
 map-to=Asignar a
 map[relational]=Mapa
 mapping-fields=Asignando campos
+new-content=Nuevo contenido (Automatic Translation)
 new-experience=Nueva experiencia
 new-segment=Nuevo segmento
 no-asset-type-selected=No hay ningún tipo de activo seleccionado
@@ -74,6 +78,9 @@ show-editable-areas=Mostrar áreas editables
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Espacio entre columnas
 specific-content=Contenido específico
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=Nombre de la estructura (Automatic Translation)
+structure-type=Tipo de estructura (Automatic Translation)
 text-alignment=Alineación del texto
 text-color=Color del texto
 text-properties=Propiedades del texto
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Ver usos (Automatic Translation)
 widgets=Widgets
 x-default={0} (por defecto)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=No tiene ninguna sección.
