--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hu.properties
@@ -12,7 +12,9 @@ change-image=Képváltás (Automatic Translation)
 changes-saved-at-x=A változtatások elmentve: {0}.
 changes-to-experiences-are-applied-immediately=Az élmény változásai azonnal érvényesülnek.
 container=Konténer
+content-name=Tartalomnév (Automatic Translation)
 content-page-editor-comments-configuration-name=Tartalom oldal szerkesztő hozzászólásai
+content-structure=Tartalom-struktúra (Automatic Translation)
 content-type=Tartalom típusa
 delete-experience=Élmény törlése
 deprioritize-experience=Élmény prioritásának törlése
@@ -22,6 +24,7 @@ draft-saved-at-x=A vázlat elmentve: {0}.
 dynamic-collection=Dinamikus gyűjtemény
 edit-experience=Élmény szerkesztése
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=Meglévő struktúra (Automatic Translation)
 experience=Élmény
 experience-help-message-empty-state=Hozzon létre élményt, ha az oldallal specifikus közönséget kíván megszólítani. Az élmény jelenlegi oldalának egy másolata. Új élményhez megváltoztathatja a tartalmat és az elrendezést.
 experience-help-message-started-state=A látogatók különböző élményeknek felelhetnek meg. Ha a változások ellentmondanak egymásnak, az alábbi prioritás érvényesül. A lista rendezéséhez használja a sorokban lévő nyilakat.
@@ -42,6 +45,7 @@ map-background=Térkép háttere
 map-to=Hozzárendelés
 map[relational]=Térkép
 mapping-fields=Mezők hozzárendelése
+new-content=Új tartalom (Automatic Translation)
 new-experience=Új élmény
 new-segment=Új szegmens
 no-asset-type-selected=Nincs kijelölt tartalomcímke
@@ -74,6 +78,9 @@ show-editable-areas=Szerkeszthető területek megjelenítése
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Oszlopok közötti hely
 specific-content=Specifikus tartalom
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=Struktúra neve (Automatic Translation)
+structure-type=Struktúra típusa (Automatic Translation)
 text-alignment=Szöveg igazítása
 text-color=Szöveg színe
 text-properties=Szöveg tulajdonságai
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Usages megtekintése (Automatic Translation)
 widgets=Widgetek
 x-default={0} (alapértelmezett)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=Nincsenek szakaszai.
