--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_lo.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_lo.properties
@@ -12,7 +12,9 @@ change-image=Change Image (Automatic Copy)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Changes to experiences are applied immediately. (Automatic Copy)
 container=Container (Automatic Copy)
+content-name=Content Name (Automatic Copy)
 content-page-editor-comments-configuration-name=Content Page Editor Comments (Automatic Copy)
+content-structure=Content Structure (Automatic Copy)
 content-type=Content Type (Automatic Copy)
 delete-experience=Delete Experience (Automatic Copy)
 deprioritize-experience=Deprioritize Experience (Automatic Copy)
@@ -22,6 +24,7 @@ draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 dynamic-collection=Dynamic Collection (Automatic Copy)
 edit-experience=Edit Experience (Automatic Copy)
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=Existing Structure (Automatic Copy)
 experience=Experience (Automatic Copy)
 experience-help-message-empty-state=Create an experience to address a page to a specific audience. An experience is a copy of your current page. You can change content and layout for the new experience. (Automatic Copy)
 experience-help-message-started-state=Visitors can match multiple experiences. If the changes conflict, the priority below will be respected. Use arrows in rows to order the list below. (Automatic Copy)
@@ -42,6 +45,7 @@ map-background=Map Background (Automatic Copy)
 map-to=Map to (Automatic Copy)
 map[relational]=Map (Automatic Copy)
 mapping-fields=Mapping Fields (Automatic Copy)
+new-content=New Content (Automatic Copy)
 new-experience=New Experience (Automatic Copy)
 new-segment=New Segment (Automatic Copy)
 no-asset-type-selected=No Asset Type Selected (Automatic Copy)
@@ -74,6 +78,9 @@ show-editable-areas=Show Editable Areas (Automatic Copy)
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Space Between Columns (Automatic Copy)
 specific-content=Specific Content (Automatic Copy)
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=Structure Name (Automatic Copy)
+structure-type=Structure Type (Automatic Copy)
 text-alignment=Text Alignment (Automatic Copy)
 text-color=Text Color (Automatic Copy)
 text-properties=Text properties (Automatic Copy)
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=View Usages (Automatic Copy)
 widgets=Widgets (Automatic Copy)
 x-default={0} (Default) (Automatic Copy)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=You do not have any sections. (Automatic Copy)
