--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_lt.properties
@@ -12,7 +12,9 @@ change-image=Keisti atvaizdą (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Patirties pakeitimai taikomi nedelsiant. (Automatic Translation)
 container=Konteineris (Automatic Translation)
+content-name=Turinio pavadinimas (Automatic Translation)
 content-page-editor-comments-configuration-name=Turinio puslapio rengyklės komentarai (Automatic Translation)
+content-structure=Turinio struktūra (Automatic Translation)
 content-type=Turinio tipas (Automatic Translation)
 delete-experience=Naikinti patirtį (Automatic Translation)
 deprioritize-experience=Deprioritize patirtis (Automatic Translation)
@@ -22,6 +24,7 @@ draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 dynamic-collection=Dinaminis kolekcija (Automatic Translation)
 edit-experience=Redaguoti patirtį (Automatic Translation)
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=Dabartinė struktūra (Automatic Translation)
 experience=Patirtis (Automatic Translation)
 experience-help-message-empty-state=Sukurkite patirties, kaip spręsti puslapį konkrečioje auditorijoje. Patirtis yra dabartinio puslapio kopija. Galite keisti naujos patirties turinį ir maketą. (Automatic Translation)
 experience-help-message-started-state=Lankytojai gali suderinti kelis potyrius. Jei pakeitimai prieštarauja, bus paisoma toliau pateiktų prioritetų. Naudokite rodykles eilutėse, kad žemiau pateiktas sąrašas. (Automatic Translation)
@@ -42,6 +45,7 @@ map-background=Žemėlapio fone (Automatic Translation)
 map-to=Susieti su (Automatic Translation)
 map[relational]=Map (Automatic Copy)
 mapping-fields=Laukų priskyrimą (Automatic Translation)
+new-content=Naujas turinys (Automatic Translation)
 new-experience=Nauja patirtis (Automatic Translation)
 new-segment=Naujas segmentas (Automatic Translation)
 no-asset-type-selected=Nepasirinktas turto tipas (Automatic Translation)
@@ -74,6 +78,9 @@ show-editable-areas=Rodyti redaguojamas sritis (Automatic Translation)
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Atstumas tarp stulpelių (Automatic Translation)
 specific-content=Konkretus turinys (Automatic Translation)
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=Struktūros pavadinimas (Automatic Translation)
+structure-type=Konstrukcijos tipas (Automatic Translation)
 text-alignment=Teksto lygiuotė (Automatic Translation)
 text-color=Teksto spalva (Automatic Translation)
 text-properties=Teksto ypatybės (Automatic Translation)
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Peržiūrėti Paproimus (Automatic Translation)
 widgets=Raštai (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=Jūs neturite jokių sekcijų. (Automatic Translation)
