--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nl.properties
@@ -12,7 +12,9 @@ change-image=Change Image (Automatic Copy)
 changes-saved-at-x=Wijzigingen opgeslagen op {0}.
 changes-to-experiences-are-applied-immediately=Wijzigingen aan ervaringen worden onmiddellijk toegepast.
 container=Houder
+content-name=Content Name (Automatic Copy)
 content-page-editor-comments-configuration-name=Opmerkingen van de editor van de pagina-inhoud
+content-structure=Content Structure (Automatic Copy)
 content-type=Inhoudstype
 delete-experience=Ervaring verwijderen
 deprioritize-experience=Prioriteit ervaring verwijderen
@@ -22,6 +24,7 @@ draft-saved-at-x=Concept opgeslagen op {0}.
 dynamic-collection=Dynamische collectie
 edit-experience=Ervaring bewerken
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=Existing Structure (Automatic Copy)
 experience=Ervaring
 experience-help-message-empty-state=Maak een ervaring om een pagina te richten tot een specifiek publiek. Een ervaring is een kopie van uw huidige pagina. U kunt de inhoud en lay-out wijzigen voor de nieuwe ervaring.
 experience-help-message-started-state=Bezoekers kunnen meerdere ervaringen matchen. Als de wijzigingen een conflict veroorzaken, wordt de onderstaande prioriteit aangehouden. Gebruik pijltjes in rijen om de onderstaande lijst te rangschikken.
@@ -42,6 +45,7 @@ map-background=Achtergrond toewijzen
 map-to=Toewijzen aan
 map[relational]=Kaart
 mapping-fields=Velden worden Toegewezen
+new-content=New Content (Automatic Copy)
 new-experience=Nieuwe ervaring
 new-segment=Nieuw segment
 no-asset-type-selected=Geen assettype geselecteerd
@@ -74,6 +78,9 @@ show-editable-areas=Bewerkbare delen tonen
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Ruimte tussen kolommen
 specific-content=Specifieke inhoud
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=Structure Name (Automatic Copy)
+structure-type=Structure Type (Automatic Copy)
 text-alignment=Tekstuitlijning
 text-color=Tekstkleur
 text-properties=Teksteigenschappen
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=View Usages (Automatic Copy)
 widgets=Widgets
 x-default={0} (standaard)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=U hebt geen secties.
