--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_th.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_th.properties
@@ -12,7 +12,9 @@ change-image=เปลี่ยนรูปภาพ (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=การเปลี่ยนแปลงประสบการณ์จะถูกนำไปใช้ในทันที (Automatic Translation)
 container=คอนเทนเนอร์ (Automatic Translation)
+content-name=ชื่อเนื้อหา (Automatic Translation)
 content-page-editor-comments-configuration-name=ความคิดเห็นเกี่ยวกับตัวแก้ไขหน้าเนื้อหา (Automatic Translation)
+content-structure=โครงสร้างเนื้อหา (Automatic Translation)
 content-type=ชนิดเนื้อหา (Automatic Translation)
 delete-experience=ลบประสบการณ์ (Automatic Translation)
 deprioritize-experience=ประสบการณ์การจัดลำดับความสำคัญ (Automatic Translation)
@@ -22,6 +24,7 @@ draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 dynamic-collection=คอลเลกชันแบบไดนามิก (Automatic Translation)
 edit-experience=แก้ไขประสบการณ์ (Automatic Translation)
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=โครงสร้างที่มีอยู่ (Automatic Translation)
 experience=ประสบการณ์ (Automatic Translation)
 experience-help-message-empty-state=สร้างประสบการณ์เพื่อแก้ไขหน้าไปยังผู้ชมที่ระบุ ประสบการณ์คือสำเนาของหน้าปัจจุบันของคุณ คุณสามารถเปลี่ยนแปลงเนื้อหาและเค้าโครงสำหรับประสบการณ์ใหม่ได้ (Automatic Translation)
 experience-help-message-started-state=นักท่องเที่ยวสามารถจับคู่ประสบการณ์ได้หลายอย่าง ถ้าการเปลี่ยนแปลงความขัดแย้ง, ระดับความสำคัญด้านล่างจะได้รับการเคารพ. ใช้ลูกศรในแถวเพื่อสั่งซื้อรายการด้านล่าง (Automatic Translation)
@@ -42,6 +45,7 @@ map-background=พื้นหลังแผนที่ (Automatic Translation
 map-to=แผนที่ (Automatic Translation)
 map[relational]=Map (Automatic Copy)
 mapping-fields=การแม็ปฟิลด์ (Automatic Translation)
+new-content=สร้างเนื้อหา (Automatic Translation)
 new-experience=ประสบการณ์ใหม่ (Automatic Translation)
 new-segment=กลุ่มใหม่ (Automatic Translation)
 no-asset-type-selected=ชนิดไม่มีสินทรัพย์ที่เลือก (Automatic Translation)
@@ -74,6 +78,9 @@ show-editable-areas=แสดงพื้นที่สามารถแก้
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=ช่องว่างระหว่างคอลัมน์ (Automatic Translation)
 specific-content=เนื้อหาเฉพาะ (Automatic Translation)
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=ชื่อโครงสร้าง (Automatic Translation)
+structure-type=ชนิดโครงสร้าง (Automatic Translation)
 text-alignment=การจัดตำแหน่งข้อความ (Automatic Translation)
 text-color=สีข้อความ (Automatic Translation)
 text-properties=คุณสมบัติข้อความ (Automatic Translation)
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=ดูประเพณี (Automatic Translation)
 widgets=วิดเจ็ต (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=คุณไม่มีส่วนใด ๆ (Automatic Translation)
