--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_tr.properties
@@ -12,7 +12,9 @@ change-image=Görüntüyü Değiştir (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Deneyimlere yapılan değişiklikler hemen uygulanır. (Automatic Translation)
 container=Konteyner (Automatic Translation)
+content-name=İçerik adı (Automatic Translation)
 content-page-editor-comments-configuration-name=İçerik sayfası düzenleyici açıklamaları (Automatic Translation)
+content-structure=İçerik yapısı (Automatic Translation)
 content-type=İçerik türü (Automatic Translation)
 delete-experience=Deneyimi Sil (Automatic Translation)
 deprioritize-experience=Tecrübeye öncelik ver (Automatic Translation)
@@ -22,6 +24,7 @@ draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 dynamic-collection=Dinamik koleksiyon (Automatic Translation)
 edit-experience=Deneyimi Düzenle (Automatic Translation)
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=Mevcut yapı (Automatic Translation)
 experience=Deneyim (Automatic Translation)
 experience-help-message-empty-state=Bir sayfayı belirli bir kitleye hitap etmek için bir deneyim oluşturun. Bir deneyim, geçerli sayfanızın bir kopyasıdır. Yeni deneyim için içeriği ve düzeni değiştirebilirsiniz. (Automatic Translation)
 experience-help-message-started-state=Ziyaretçiler birden fazla deneyim eşleştirebilir. Değişiklikler çakışırsa, aşağıdaki önceliğe uyulacaktır. Aşağıdaki listeyi sipariş etmek için satırlardaki okları kullanın. (Automatic Translation)
@@ -42,6 +45,7 @@ map-background=Harita arka plan (Automatic Translation)
 map-to=Eşleme (Automatic Translation)
 map[relational]=Map (Automatic Copy)
 mapping-fields=Eşleme alanları (Automatic Translation)
+new-content=Yeni Içerik (Automatic Translation)
 new-experience=Yeni bir deneyim (Automatic Translation)
 new-segment=Yeni segment (Automatic Translation)
 no-asset-type-selected=Seçili hiçbir kıymet türü (Automatic Translation)
@@ -74,6 +78,9 @@ show-editable-areas=Düzenlenebilir alanları göster: (Automatic Translation)
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Sütunlar arasındaki boşluk (Automatic Translation)
 specific-content=Spesifik Içerik (Automatic Translation)
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=Yapı adı (Automatic Translation)
+structure-type=Yapı türü (Automatic Translation)
 text-alignment=Metin hizalama (Automatic Translation)
 text-color=Metin rengi (Automatic Translation)
 text-properties=Metin özellikleri (Automatic Translation)
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Kullanım görünümü (Automatic Translation)
 widgets=Widget'ları (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=Herhangi bir bölüm var mı. (Automatic Translation)
