--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_uk.properties
@@ -12,7 +12,9 @@ change-image=Змінити зображення (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Зміни, внесені до досвіду, застосовуються негайно. (Automatic Translation)
 container=Контейнер (Automatic Translation)
+content-name=Ім'я вмісту (Automatic Translation)
 content-page-editor-comments-configuration-name=Зміст сторінці редактора коментарів (Automatic Translation)
+content-structure=Структура вмісту (Automatic Translation)
 content-type=Тип вмісту (Automatic Translation)
 delete-experience=Видалити досвід (Automatic Translation)
 deprioritize-experience=Deprioritize досвід (Automatic Translation)
@@ -22,6 +24,7 @@ draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 dynamic-collection=Динамічна колекція (Automatic Translation)
 edit-experience=Редагувати досвід (Automatic Translation)
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=Існуюча структура (Automatic Translation)
 experience=Досвід (Automatic Translation)
 experience-help-message-empty-state=Створити досвід для вирішення сторінки певної аудиторії. Досвід — це копія поточної сторінки. Можна змінити вміст і макет нового досвіду. (Automatic Translation)
 experience-help-message-started-state=Відвідувачі можуть відповідати декільком досвідом. Якщо зміни конфліктують, пріоритет нижче буде поважати. Використовуйте стрілки в рядках, щоб замовити список нижче. (Automatic Translation)
@@ -42,6 +45,7 @@ map-background=Карта фону (Automatic Translation)
 map-to=Зіставити (Automatic Translation)
 map[relational]=Map (Automatic Copy)
 mapping-fields=Зіставлення полів (Automatic Translation)
+new-content=Новий контент (Automatic Translation)
 new-experience=Новий досвід (Automatic Translation)
 new-segment=Новий сегмент (Automatic Translation)
 no-asset-type-selected=Не вибраний тип активу (Automatic Translation)
@@ -74,6 +78,9 @@ show-editable-areas=Показати редагованими областями
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Інтервал між колонками (Automatic Translation)
 specific-content=Конкретний вміст (Automatic Translation)
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=Назва структури (Automatic Translation)
+structure-type=Тип структури (Automatic Translation)
 text-alignment=Вирівнювання тексту (Automatic Translation)
 text-color=Колір тексту (Automatic Translation)
 text-properties=Властивості тексту (Automatic Translation)
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Переглянути звичаї (Automatic Translation)
 widgets=Віджети (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=Ви не маєте будь-які розділи. (Automatic Translation)
