--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_vi.properties
@@ -12,7 +12,9 @@ change-image=Thay đổi hình ảnh (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Thay đổi kinh nghiệm được áp dụng ngay lập tức. (Automatic Translation)
 container=Container (Automatic Translation)
+content-name=Tên nội dung (Automatic Translation)
 content-page-editor-comments-configuration-name=Nội dung trang Editor Comment (Automatic Translation)
+content-structure=Cấu trúc nội dung (Automatic Translation)
 content-type=Loại nội dung (Automatic Translation)
 delete-experience=Xóa trải nghiệm (Automatic Translation)
 deprioritize-experience=Kinh nghiệm deưu tiên (Automatic Translation)
@@ -22,6 +24,7 @@ draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 dynamic-collection=Bộ sưu tập năng động (Automatic Translation)
 edit-experience=Chỉnh sửa trải nghiệm (Automatic Translation)
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=Cấu trúc hiện có (Automatic Translation)
 experience=Kinh nghiệm (Automatic Translation)
 experience-help-message-empty-state=Tạo trải nghiệm để đề địa chỉ một trang cho một đối tượng cụ thể. Một kinh nghiệm là một bản sao của trang hiện tại của bạn. Bạn có thể thay đổi nội dung và bố cục cho trải nghiệm mới. (Automatic Translation)
 experience-help-message-started-state=Khách truy cập có thể phù hợp với nhiều kinh nghiệm. Nếu những thay đổi xung đột, mức độ ưu tiên bên dưới sẽ được tôn trọng. Sử dụng mũi tên trong hàng để đặt hàng danh sách dưới đây. (Automatic Translation)
@@ -42,6 +45,7 @@ map-background=Bản đồ nền (Automatic Translation)
 map-to=Bản đồ đến (Automatic Translation)
 map[relational]=Map (Automatic Copy)
 mapping-fields=Lập bản đồ trường (Automatic Translation)
+new-content=Nội dung mới (Automatic Translation)
 new-experience=Trải nghiệm mới (Automatic Translation)
 new-segment=Phân đoạn mới (Automatic Translation)
 no-asset-type-selected=Không có loại tài sản đã chọn (Automatic Translation)
@@ -74,6 +78,9 @@ show-editable-areas=Hiển thị các khu vực có thể chỉnh sửa (Automat
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Không gian giữa các cột (Automatic Translation)
 specific-content=Nội dung cụ thể (Automatic Translation)
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=Tên cấu trúc (Automatic Translation)
+structure-type=Loại cấu trúc (Automatic Translation)
 text-alignment=Căn chỉnh văn bản (Automatic Translation)
 text-color=Màu văn bản (Automatic Translation)
 text-properties=Tính văn bản (Automatic Translation)
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Xem Usages (Automatic Translation)
 widgets=Vật dụng (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=Bạn không có bất kỳ phần của nó. (Automatic Translation)
