--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_CN.properties
@@ -12,7 +12,9 @@ change-image=更改图像 (Automatic Translation)
 changes-saved-at-x=更改已保存在 {0}。
 changes-to-experiences-are-applied-immediately=将立即应用对体验的变更。
 container=容器
+content-name=内容名称 (Automatic Translation)
 content-page-editor-comments-configuration-name=内容页编辑器备注
+content-structure=内容结构 (Automatic Translation)
 content-type=内容类型
 delete-experience=删除体验
 deprioritize-experience=取消优先处理体验
@@ -22,6 +24,7 @@ draft-saved-at-x=草稿保存于 {0}。
 dynamic-collection=动态集合
 edit-experience=编辑体验
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=现有结构 (Automatic Translation)
 experience=体验
 experience-help-message-empty-state=创建体验来向特定受众显示页面。体验是您当前页面的副本。您可为新体验更改内容和布局。
 experience-help-message-started-state=访客可以匹配多个表达式。如果变更冲突，将遵循以下优先级。在行中使用箭头可在下面对列表进行排序。
@@ -42,6 +45,7 @@ map-background=地图背景
 map-to=映射到
 map[relational]=映射
 mapping-fields=映射字段
+new-content=新内容 (Automatic Translation)
 new-experience=新体验
 new-segment=新细分
 no-asset-type-selected=未选择资产类型
@@ -74,6 +78,9 @@ show-editable-areas=显示可编辑区域
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=列之间的间距
 specific-content=特定内容
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=结构名称 (Automatic Translation)
+structure-type=结构类型 (Automatic Translation)
 text-alignment=文本对齐
 text-color=文本颜色
 text-properties=文本属性
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=查看用法 (Automatic Translation)
 widgets=微件
 x-default={0}（默认）
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=您没有任何部分。
