--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_TW.properties
@@ -12,7 +12,9 @@ change-image=更改圖像 (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=對體驗的更改將立即應用。 (Automatic Translation)
 container=容器 (Automatic Translation)
+content-name=內容名稱 (Automatic Translation)
 content-page-editor-comments-configuration-name=內容頁編輯器注釋 (Automatic Translation)
+content-structure=內容結構 (Automatic Translation)
 content-type=內容類型 (Automatic Translation)
 delete-experience=刪除體驗 (Automatic Translation)
 deprioritize-experience=降低體驗的能力 (Automatic Translation)
@@ -22,6 +24,7 @@ draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 dynamic-collection=動態集合 (Automatic Translation)
 edit-experience=編輯體驗 (Automatic Translation)
 edited-x=Edited {0} (Automatic Copy)
+existing-structure=現有結構 (Automatic Translation)
 experience=經驗 (Automatic Translation)
 experience-help-message-empty-state=創建向特定受眾位址的體驗。體驗是當前頁的副本。您可以更改新體驗的內容和佈局。 (Automatic Translation)
 experience-help-message-started-state=訪問者可以匹配多種體驗。如果更改發生衝突, 將遵守以下優先順序。在行中使用箭頭對下面的清單進行排序。 (Automatic Translation)
@@ -42,6 +45,7 @@ map-background=地圖背景 (Automatic Translation)
 map-to=地圖到 (Automatic Translation)
 map[relational]=Map (Automatic Copy)
 mapping-fields=映射欄位 (Automatic Translation)
+new-content=新內容 (Automatic Translation)
 new-experience=全新體驗 (Automatic Translation)
 new-segment=新市場區隔 (Automatic Translation)
 no-asset-type-selected=未選擇任何資產類型 (Automatic Translation)
@@ -74,6 +78,9 @@ show-editable-areas=顯示可編輯區域 (Automatic Translation)
 show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=列之間的空間 (Automatic Translation)
 specific-content=特定內容 (Automatic Translation)
+step-x-of-x=Step {0} of {1} (Automatic Copy)
+structure-name=結構名稱 (Automatic Translation)
+structure-type=結構類型 (Automatic Translation)
 text-alignment=文本對齊 (Automatic Translation)
 text-color=文本顏色 (Automatic Translation)
 text-properties=文字屬性 (Automatic Translation)
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=查看用法 (Automatic Translation)
 widgets=部件 (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
+x-fields={0} fields (Automatic Copy)
 you-do-not-have-any-sections=您沒有任何部分。 (Automatic Translation)
